# pico_RFID

./: CMakeLists.txt  README.md
python_scripts/: README.md  test_read.py
src/: read_rfid.c
